refactor(mybatis,oss): 使用Java 16的toList()替代Collectors.toList()
- 在SqlFilterArgumentResolver中优化OrderItem集合的构建方式
- 在LocalFileTemplate中简化Bucket和S3ObjectSummary的列表转换
- 统一采用更简洁的Java 16标准API实现集合操作

Signed-off-by: PIG AI <wangiegie@gmail.com>