@@ -46,7 +46,7 @@ public class LocalFileTemplate implements FileTemplate {
 		return Arrays.stream(FileUtil.ls(properties.getLocal().getBasePath()))
 			.filter(FileUtil::isDirectory)
 			.map(dir -> new Bucket(dir.getName()))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	/**
@@ -133,7 +133,7 @@ public class LocalFileTemplate implements FileTemplate {
 			S3ObjectSummary summary = new S3ObjectSummary();
 			summary.setKey(file.getName());
 			return summary;
-		}).collect(Collectors.toList());
+		}).toList();
 	}
 
 }
